--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/Stallezhou/vue-ssr-demo#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "vue": "^2.6.12",
     "vue-server-renderer": "^2.6.12"
